This commit adds:
- .github folder
- .vscode settings
- .vscode task and launch and debug
- vscode workspace
- mwlog components and assoc files
- additional pics for cards

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,25 @@
 {
+    "[css]": {
+        "editor.suggest.insertMode": "replace"
+    },
+    "[html]": {
+        "editor.suggest.insertMode": "replace"
+    },
+    "[javascript]": {
+        "editor.maxTokenizationLineLength": 2500
+    },
+    "[json]": {
+        "editor.quickSuggestions": {
+            "strings": true
+        },
+        "editor.suggest.insertMode": "replace"
+    },
+    "[jsonc]": {
+        "editor.quickSuggestions": {
+            "strings": true
+        },
+        "editor.suggest.insertMode": "replace"
+    },
+
     "liveServer.settings.port": 5501
 }
