--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
+    "mongodb": "^4.9.1",
+    "mongoose": "^6.5.5",
+    "nodemon": "^2.0.19",
+    "uuid": "^9.0.0",
+    "ws": "^8.8.1"
   }
 }
