--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "mongodb": "^4.9.1",
