--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,18 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "label": "",
-    "command": "",
-    "args": [
-        "--no-color"
-    ],
-    "tasks": [
-        {
-            "label": "",
-        }
-    ]
+	// See https://go.microsoft.com/fwlink/?LinkId=733558
+	// for the documentation about the tasks.json format
+	"version": "2.0.0",
+	"label": "build",
+	"type": "shell",
+	"command": "",
+	"args": [
+		""
+	],
+	"options": {},
+	"tasks": [
+		{
+			"label": "",
+		}
+	],
+	"problemMatcher": [],
 }
