--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/monatheoctocat/my_package",
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.1.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -36,10 +37,12 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "helmet": "^6.0.0",
     "lodash": "^4.17.21",
     "mongo-express": "^1.0.0",
-    "mongodb": "^4.9.1",
+    "mongodb": "^5.0.1",
     "mongoose": "^6.5.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0",
     "ws": "^8.8.1"
