--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node test.js",
     "start": "node server.js",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -39,10 +39,12 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongo-express": "^1.0.0",
+    "mongo-express": "^1.0.1",
     "mongodb": "^5.0.1",
     "mongoose": "^6.5.5",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0",
